IGNITE-23416 Fix ClientCache#putAll unordered map warn