@@ -15,22 +15,14 @@
  * limitations under the License.
  */
 
-package org.apache.ignite.internal.util;
+package org.apache.ignite.internal.processors.platform.client.cache;
 
 import java.io.Serializable;
-import java.util.AbstractMap;
-import java.util.AbstractSet;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
-import java.util.Objects;
 import java.util.Set;
-import org.apache.ignite.internal.util.tostring.GridToStringExclude;
 import org.apache.ignite.internal.util.typedef.internal.S;
 import org.jetbrains.annotations.NotNull;
 
@@ -39,7 +31,7 @@ import org.jetbrains.annotations.NotNull;
  * Relies on underling arrays for keys and values. Unique keys for input only to prevent deadlocks.
  * Note: For internal use only
  */
-public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
+public class GridArrayMap<K, V> implements Map<K, V>, Serializable {
     /** */
     private static final long serialVersionUID = 0L;
 
@@ -48,10 +40,6 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
 
     /** */
     private static final float GROWTH_FACTOR = 1.5f;
-
-    /** HashSet to track keys */
-    @GridToStringExclude
-    private final Set<K> keySet = new HashSet<>();
 
     /** */
     private K[] keys;
@@ -63,13 +51,13 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
     private int size;
 
     /** */
-    public GridClientPutAllMap() {
+    public GridArrayMap() {
         this(DEFAULT_CAPACITY);
     }
 
     /** */
     @SuppressWarnings("unchecked")
-    public GridClientPutAllMap(int capacity) {
+    public GridArrayMap(int capacity) {
         keys = (K[])new Object[capacity];
         values = (V[])new Object[capacity];
         size = 0;
@@ -87,40 +75,25 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
 
     /** {@inheritDoc} */
     @Override public boolean containsKey(Object key) {
-        return keySet.contains(key);
+        throw new UnsupportedOperationException("'containsKey' operation is not supported by GridArrayMap.");
     }
 
     /** {@inheritDoc} */
     @Override public boolean containsValue(Object val) {
-        for (int i = 0; i < size; ++i) {
-            if (Objects.equals(values[i], val))
-                return true;
-        }
-
-        return false;
+        throw new UnsupportedOperationException("'containsValue' operation is not supported by GridArrayMap.");
     }
 
     /** {@inheritDoc} */
     @Override public V get(Object key) {
-        for (int i = 0; i < size; ++i) {
-            if (Objects.equals(keys[i], key))
-                return values[i];
-        }
-
-        return null;
+        throw new UnsupportedOperationException("'get' operation is not supported by GridArrayMap.");
     }
 
     /** {@inheritDoc} */
     @Override public V put(K key, V val) {
-        if (keySet.contains(key))
-            throw new IllegalArgumentException("Unique keys are allowed only!");
-
         ensureCapacity();
 
         keys[size] = key;
         values[size] = val;
-
-        keySet.add(key);
 
         size++;
 
@@ -129,36 +102,12 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
 
     /** {@inheritDoc} */
     @Override public V remove(Object key) {
-        if (!keySet.contains(key))
-            return null;
-
-        for (int i = 0; i < size; ++i) {
-            if (Objects.equals(keys[i], key)) {
-                V oldVal = values[i];
-
-                for (int j = i; j < size - 1; ++j) {
-                    keys[j] = keys[j + 1];
-                    values[j] = values[j + 1];
-                }
-
-                keys[size - 1] = null;
-                values[size - 1] = null;
-
-                keySet.remove(key);
-
-                size--;
-
-                return oldVal;
-            }
-        }
-
-        return null;
+        throw new UnsupportedOperationException("'remove' operation is not supported by GridArrayMap.");
     }
 
     /** {@inheritDoc} */
-    @Override public void putAll(Map<? extends K, ? extends V> m) {
-        for (Entry<? extends K, ? extends V> entry : m.entrySet())
-            put(entry.getKey(), entry.getValue());
+    @Override public void putAll(@NotNull Map<? extends K, ? extends V> m) {
+        throw new UnsupportedOperationException("'remove' operation is not supported by GridArrayMap.");
     }
 
     /** {@inheritDoc} */
@@ -167,13 +116,11 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
         Arrays.fill(values, 0, size, null);
 
         size = 0;
-
-        keySet.clear();
     }
 
     /** {@inheritDoc} */
     @Override public @NotNull Set<K> keySet() {
-        return Collections.unmodifiableSet(keySet);
+        return Set.of(keys);
     }
 
     /** {@inheritDoc} */
@@ -183,37 +130,7 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
 
     /** {@inheritDoc} */
     @Override public @NotNull Set<Entry<K, V>> entrySet() {
-        return new AbstractSet<Entry<K, V>>() {
-            @Override public @NotNull Iterator<Entry<K, V>> iterator() {
-                return new Iterator<Entry<K, V>>() {
-                    private int curIdx = 0;
-
-                    @Override public boolean hasNext() {
-                        return curIdx < size;
-                    }
-
-                    @Override public Entry<K, V> next() {
-                        if (!hasNext())
-                            throw new NoSuchElementException();
-
-                        K key = keys[curIdx];
-                        V val = values[curIdx];
-
-                        curIdx++;
-
-                        return new AbstractMap.SimpleImmutableEntry<>(key, val);
-                    }
-
-                    @Override public void remove() {
-                        throw new UnsupportedOperationException("remove() is not supported in this EntrySet iterator.");
-                    }
-                };
-            }
-
-            @Override public int size() {
-                return size;
-            }
-        };
+        throw new UnsupportedOperationException("'remove' operation is not supported by GridArrayMap.");
     }
 
     /** */
@@ -228,6 +145,6 @@ public class GridClientPutAllMap<K, V> implements Map<K, V>, Serializable {
 
     /** {@inheritDoc} */
     @Override public String toString() {
-        return S.toString(GridClientPutAllMap.class, this);
+        return S.toString(GridArrayMap.class, this);
     }
 }
